--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "self-reload-json": "^0.4.0",
     "sequelize": "^6.5.0"
